💄 offers | fixed too wide images

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -113,6 +113,7 @@ img {
     }
     &.thumbnail {
         max-height: 10em;
+        max-width: 10em;
     }
 }
 
